fixed filter issue that was manifesting on mobile

--- a/src/css/alice.scss
+++ b/src/css/alice.scss
@@ -712,7 +712,7 @@ div.msg div.oembed {
 
 sup.external {
   line-height: 0px;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 sup.external a {
